--- a/main.html
+++ b/main.html
@@ -8,8 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<main class="accio" id="job">
+		<div>
+			<p class="hello-accio-job">Hello Accio job</p>
+		</div>
+	</main>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
